feat: estrutura inicial da tela de login com navegação simulada

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,3 +6,15 @@ body {
   font-family: "poppins";
   overflow-x: hidden;
 }
+
+.mt-page {
+  margin-top: 90px;
+}
+
+select {
+  border: 0px;
+  background-color: #fff;
+
+  cursor: pointer;
+  width: 100%;
+}
